amélioration du code + ajout policy